# vtrunkd

./: .gitignore  Cargo.toml  README.md  linkfd.c
.Jules/: palette.md
.codex/: prompt.md  ralph-log.md  ralph-loop.md
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md
gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
gui/src/: main.js  style.css  style.css.bak
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
reports/: analysis.md  executive_summary.md  findings.csv  findings.json  findings.yaml
src/: config.rs  error.rs  main.rs  network.rs  wireguard.rs
verification/: verify_ux.py
