[package]
name = "vtrunkd-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.5" }

[dependencies]
tauri = { version = "1.6.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
base64 = "0.21"
boringtun = "0.7.0"
get_if_addrs = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
